# ScanDataPy

./: .gitignore  ARCHITECTURE_ISSUES_REPORT.md  DETAILED_CODE_ANALYSIS.md  LICENSE.txt  README.md  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  todo-txt
.cursor/rules/: my-custom-rule.mdc
.spyproject/config/backups/: workspace.ini.bak
220408/: NoteBookTemp.txt
70127A/: 70127A103.da  70127A10501.da  70127A10502.da
Docker/: Dockerfile  docker install.txt  docker-README.md
ScanDataPy/: UML_SCANDATA.drawio  __init__.py  __main__.py  common_class.py  test_pyqt.py
ScanDataPy/ScanDataPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ScanDataPy/controller/: controller_axes.py  controller_data.py  controller_filename.py  controller_key_manager.py  controller_live_view.py  controller_main.py
ScanDataPy/model/: builder.py  file_io.py  model.py  modifier.py  modifiers.py  value_object.py
ScanDataPy/setting/: data_window_setting.json  file_setting.json
ScanDataPy/view/: __init__.py  view.py  view_data.py  view_list.py
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
tests/: scandata_setting.json  test001_frame.py  test002_image.py  test003_trace.py  test004_electrace.py  test900_json.py  test901_camera_test.py  test902_pytorch.py  test999_temporary.py  test_controller_main.py  test_main.py  test_main_app.py
